# openapi.yaml
@@ -11,6 +11,8 @@ servers:
 paths:
   /api/v1/auth/create:
     post:
+      tags:
+        - auth
       summary: Create a new user account
       responses:
         '200':
@@ -37,6 +39,8 @@ paths:
                 - username
   /api/v1/auth/login:
     post:
+      tags:
+        - auth
       summary: Log in
       responses:
         '200':
@@ -59,6 +63,8 @@ paths:
                 - password
   /.well-known/webfinger:
     get:
+      tags:
+        - activitypub
       summary: Look up by handle
       responses:
         '200':
@@ -105,6 +111,8 @@ paths:
             type: string
   /api/v1/user/{username}:
     get:
+      tags:
+        - activitypub
       parameters:
         - in: path
           name: username
@@ -120,6 +128,78 @@ paths:
             'application/activity+json':
               schema:
                 type: object
+  /api/v1/user/{username}/followers:
+    get:
+      tags:
+        - activitypub
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: Username of user
+        - in: query
+          name: page
+          schema:
+            type: number
+          required: false
+          description: Page of followers
+      description: Get activitypub details of user
+      responses:
+        '200':
+          description: ActivityPub data
+          content:
+            'application/activity+json':
+              schema:
+                type: object
+
+  /api/v1/user/{username}/following:
+    get:
+      tags:
+        - activitypub
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: Username of user
+        - in: query
+          name: page
+          schema:
+            type: number
+          required: false
+          description: Page of users which are followed
+      description: Get activitypub details of user
+      responses:
+        '200':
+          description: ActivityPub data
+          content:
+            'application/activity+json':
+              schema:
+                type: object
+
+
+  /api/v1/manage/follow:
+    post:
+      tags:
+        - manage
+      summary: Follow a remote user
+      responses:
+        "200":
+          description: User follow successfully requested
+      requestBody:
+        required: true
+        content:
+          "application/json":
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+              required:
+                - username
 
 
 
